# org.kde.dualsenseidle

./: README.md  metadata.json
contents/code/org.kde.dualsense/: dualsense.qmltypes  qmldir
contents/ui/: ControllerCard.qml  main.qml  test.qml
plugin/: CMakeLists.txt  DbusBridge.cpp  DbusBridge.h  qmldir.in
